--- a/test/fixtures/products.yml
+++ b/test/fixtures/products.yml
@@ -1,9 +1,14 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/Fixtures.html
-
 one:
   title: MyString
+  description: MyString
   price: 9.99
 
 two:
-  title: MyString
+  title: MySt
+  description: MyString
   price: 9.99
+Ruby:
+  title: Ruby on Rails
+  description: Ruby on Rails
+  price: 50.50
